--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -8,7 +8,10 @@ RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
         libpng-dev \
+        zlib1g-dev \
+        libzip-dev \
     && docker-php-ext-configure pdo_mysql \
     && docker-php-ext-install pdo_mysql \
+    && docker-php-ext-install zip \
     && pecl install redis \
     && docker-php-ext-enable redis
